[project]
name = "aionepviewer"
version = "0.1.0"
description = "Async Python library for the NEP solar inverter cloud API (nepviewer.net)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["nep", "solar", "inverter", "home-assistant", "async", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0",
    "termgraph>=0.5.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
]

[dependency-groups]
dev = [
    "aionepviewer[cli]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
    "mypy>=1.10",
]

[project.scripts]
aionepviewer = "aionepviewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
